# senclave

./: .gitignore  CMakeLists.txt  Readme.md  client.cpp
src/: Constants.h  CryptoService.cpp  CryptoService.h  IPCServer.cpp  IPCServer.h  KeyManager.cpp  KeyManager.h  main.cpp
